@@ -6,7 +6,7 @@ perl:
     - "5.14"
     - "5.12"
 install:
-    - cpanm --quiet --notest --skip-satisfied Dist::Milla AnyEvent
+    - cpanm --quiet --notest --skip-satisfied Dist::Milla AnyEvent Test::Output
     - cpanm --installdeps .
 
 # full release test
